# recurse-world-map

./: .flaskenv  .gitignore  CONTRIBUTORS.md  Procfile  README.md  env.template  geo-lookup.py  geo_lookup.py  geocode_locations.py  insert_rc_data.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.sql  update-data.py  update_data.py  worldmap.py
public/: index.html
src/: App.js  LeafletMap.js  LocationClusterGroup.js  LocationMarker.js  api.js  index.js  index.jsx  map.css
src/components/: App.js  App.jsx  Footer.js  Footer.jsx  Navbar.js  Spinner.jsx
src/components/header/: Navbar.jsx
src/components/home/: App.js  Authenticator.js  Footer.js  Navbar.js
src/components/login/: LoginButton.js
src/components/map/: LeafletMap.js  LeafletMap.jsx  Legend.js  LocationClusterGroup.js  LocationMarker.js  LocationMarker.jsx  LocationPopup.js  LocationPopup.jsx  LocationProvider.js  Map.js  RadiusUtil.js  RadiusUtil.jsx
src/components/person_info/: AuthenticatedPerson.jsx  MapPerson.jsx  PersonPhoto.jsx
src/components/search/: LocationInput.js  LocationInput.jsx  ResetButton.js  Search.js  Search.jsx
src/css/: index.css  map.css  popup.css  search.css
